welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:8: error: type mismatch;
 found   : Unit
 required: Int
	else if(Math.abs(b - 10) < Math.abs(a - 10)){
             ^