welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
	if(a == b){
		return 0;
	}
	else if(Math.abs(a - 10) > Math.abs(b - 10)){
		return b;
	}
	else if(Math.abs(b - 10) < Math.abs(a - 10)){
		return a;
	}
}
